# utfout

./: .travis.yml  ChangeLog  Makefile.am  Makefile.in  NEWS  README.rst  TODO  config.h.in  configure  configure.ac  reconf  utfout.spec.in
debian/: changelog  control  copyright  files  manpages  watch
m4/: ChangeLog
man/: out.1  utfout.1
po/: ChangeLog  POTFILES  POTFILES.in  utfout.pot
src/: Makefile.am  Makefile.in  out.c  utfout.c
